<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mirza_medium"
        android:text="@string/top_phrase_01"
        android:textColor="#f6541d"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnTR"
        app:layout_constraintStart_toEndOf="@+id/btnTL"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTR"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTL"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_default"
        android:fontFamily="@font/mirza_medium"
        android:text="23"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTR">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_rectangle_base"
            android:fontFamily="@font/mirza_medium"
            android:tag="off"
            android:text="@string/helth"
            android:textAllCaps="false"
            android:textColor="#f6541d"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rectangle_base"
            android:fontFamily="@font/mirza_medium"
            android:tag="off"
            android:text="@string/goal"
            android:textAllCaps="false"
            android:textColor="#f6541d"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rectangle_base"
            android:fontFamily="@font/mirza_medium"
            android:tag="off"
            android:text="@string/bit_of_fun"
            android:textAllCaps="false"
            android:textColor="#f6541d"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rectangle_base"
            android:fontFamily="@font/mirza_medium"
            android:tag="off"
            android:text="@string/study"
            android:textAllCaps="false"
            android:textColor="#f6541d"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rectangle_base"
            android:fontFamily="@font/mirza_medium"
            android:tag="off"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="#f6541d"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rectangle_base"
            android:fontFamily="@font/mirza_medium"
            android:tag="off"
            android:text="@string/happy"
            android:textAllCaps="false"
            android:textColor="#f6541d"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBR"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:background="@drawable/btn_add" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>